ADD truffle migrate 명령을 추가하다

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "chain": "ganache",
-    "compile": "truffle compile"
+    "truffle:compile": "truffle compile",
+    "truffle:migrate": "truffle migrate --reset"
   },
   "eslintConfig": {
     "globals": {
