ADD truffle console을 실행하는 명령어를 추가하다

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "chain": "ganache",
+    "truffle:console": "truffle console",
     "truffle:compile": "truffle compile",
     "truffle:migrate": "truffle migrate --reset"
   },
